--- a/.github/workflows/github-actions-python-testing.yml
+++ b/.github/workflows/github-actions-python-testing.yml
@@ -1,16 +1,16 @@
-name: Python package
-
+name: GitHub Actions Python Testing
+run-name: Python Testing
 on: [push]
 
 jobs:
-  build:
-
+  Test-Python:
     runs-on: ubuntu-latest
     strategy:
       matrix:
         python-version: ["3.7", "3.8", "3.9", "3.10"]
 
     steps:
+      - name: Checkout code
       - uses: actions/checkout@v3
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v4
@@ -21,7 +21,10 @@ jobs:
           python -m pip install --upgrade pip
           pip install flake8 pytest
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-      - name: Lint with flake8
+      - name: List files in the repository
+        run: |
+          ls ${{ github.workspace }}
+      - name: Check for Syntax Errors
         run: |
           # stop the build if there are Python syntax errors or undefined names
           flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
