--- a/.github/workflows/github-actions-python-testing.yml
+++ b/.github/workflows/github-actions-python-testing.yml
@@ -1,6 +1,6 @@
 name: GitHub Actions Python Testing
 run-name: Python Testing
-on: [push]
+on: [push, workflow_dispatch]
 
 jobs:
   Test-Python:
@@ -32,4 +32,4 @@ jobs:
           flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
       - name: Test with pytest
         run: |
-          pytest softDev
+          pytest ${{ github.workspace }}
