--- a/.github/workflows/github-actions-python-testing.yml
+++ b/.github/workflows/github-actions-python-testing.yml
@@ -3,7 +3,7 @@ run-name: Python Testing
 on: [push, workflow_dispatch]
 
 jobs:
-  Test-Python:
+  Check-Python-Suntax:
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -30,6 +30,3 @@ jobs:
           flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
           # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
           flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-      - name: Test with pytest
-        run: |
-          pytest 03_py
