--- a/.github/workflows/github-actions-python-testing.yml
+++ b/.github/workflows/github-actions-python-testing.yml
@@ -1,6 +1,6 @@
 name: GitHub Actions Python Testing
 run-name: Python Testing
-on: [push, workflow_dispatch]
+on: [workflow_dispatch]
 
 jobs:
   Check-Python-Syntax:
